Creation de la classe Utilisateur.java, UtilisateurService.java, UtilisateurMapper.java, UtilisateurDTO.java, UnauthorizedException.java, et mise a jour de pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,19 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.4</version>
         </dependency>
+
+        <!-- MapStruct pour le mapping entre entités et DTOs -->
+<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct</artifactId>
+    <version>1.5.5.Final</version>
+</dependency>
+<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct-processor</artifactId>
+    <version>1.5.5.Final</version>
+    <scope>provided</scope>
+</dependency>
         
         <!-- JUnit 5 pour les Tests -->
         <dependency>
@@ -92,7 +105,7 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
